objects/Console_Menu_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used to configure console menu component.</description>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>The Order in which the menu items will appear in Quick Access Console Component</description>
        <label>Sort Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <description>Specifies where to open the linked URL.</description>
        <inlineHelpText>Specifies where to open the linked URL. Its value can be &quot;New Window&quot; and &quot;Console&quot;.</inlineHelpText>
        <label>Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>URL for the menu.</description>
        <inlineHelpText>URL for the menu.</inlineHelpText>
        <label>URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Console Menu Settings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sort_Order__c</columns>
        <columns>Target__c</columns>
        <columns>URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>